--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body{
 
 }
 .top{
-    background-color: red;
+    background-color: rgb(255, 94, 0);
     width: 100%;
     height: fit-content;
     margin-top: 0%;
@@ -24,7 +24,7 @@ body{
 }
 .title-text{
     margin-left: 5%;
-    font-size: 30px;
+    font-size: 2.3rem;
     font-weight: bold;
     color: white;
     grid-column: 2;
@@ -37,9 +37,9 @@ body{
     grid-row: 1;
 }
 .logo{
-    width: 75px;
-    height: 75px;
-    margin-left: 30px;
+    width: 5.5rem;
+    height: 5.5rem;
+    margin-left: 2.3rem;
 }
 .button-div{
     width: fit-content;
@@ -64,7 +64,7 @@ body{
     height: fit-content;
 }
 .button-div:hover{
-    background-color: red;
+    background-color: rgb(255, 94, 0);
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
     transition: all 0.5s ease-out;
 }
