--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 .dia{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     font-weight: 1000;
 }
 .time-table th:hover{
@@ -29,73 +29,73 @@
 }
 .hora{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     font-weight: 100;
 }
 .aquagym{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgb(102, 162, 251);
     font-weight: 100;
 
 }
 .nataciosincronitzada{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgb(247, 173, 75);
     font-weight: 100;
 }
 .nataciodecompeticio{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgb(230, 98, 98);
     font-weight: 100;
 }
 .trampoli{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgb(255, 187, 139);
     font-weight: 100;
 }
 .saltdeplataforma{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgb(255, 234, 128);
     font-weight: 100;
 }
 .nataciorecreativa{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgb(144, 220, 255);
     font-weight: 100;
 }
 .waterpolo{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgba(104, 245, 245, 0.552);
     font-weight: 100;
 }
 .manteniment{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: rgb(250, 116, 143);
     font-weight: 100;
 }
 .formaciosocorrisme{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.2rem;
     background-color: aquamarine;
     font-weight: 100;
 }
 .blanc{
     border: 0px solid black;
-    font-size: 19px;
+    font-size: 1.3rem;
     font-weight: 100;
     
 }
 .descanspersonal{
     border: 1px solid black;
-    font-size: 19px;
+    font-size: 1.3rem;
     background-color: rgb(173, 236, 131);
     font-weight: 100;
 }
@@ -106,14 +106,17 @@ html{
 .carnet-table{
     background-color: rgb(249, 192, 143);
     border:1px solid black;
-    border-spacing: 1px;
+    border-spacing: 0.1rem;
+    margin-top:2rem;
+    width: 80%; 
+    margin-left: 1.5rem;
 }
 .carnet-row th{
     background-color: rgb(249, 192, 143);
-    border: 1px solid black;
-    border-spacing: 30px;
+    border: 0.1rem solid black;
+    border-spacing: 2.3rem;
     font-family: verdana;
-    font-size: 20px;
+    font-size: 1.3rem;
     font-weight: bolder;
     }
         
@@ -122,7 +125,7 @@ html{
     border:1px solid black;
     text-align: center;
     font-weight: bold;
-    font-size: 19px;
+    font-size: 1.2rem;
 }
 .carnet-row td{
             
@@ -153,7 +156,7 @@ html{
 
 }
 .top{
-    background-color: red;
+    background-color: rgb(255, 94, 0);
     width: 100%;
     height: fit-content;
     margin-top: 0%;
@@ -172,7 +175,7 @@ html{
 .title-text{
     text-decoration: none;
     margin-left: 5%;
-    font-size: 30px;
+    font-size: 2.3rem;
     font-weight: bold;
     color: white;
     grid-column: 2;
@@ -185,24 +188,38 @@ html{
     grid-row: 1;
 }
 .logo{
-    width: 75px;
-    height: 75px;
-    margin-left: 30px;
+    width: 5.5rem;
+    height: 5.5rem;
+    margin-left: 2.3rem;
 }
 .button-div{
     width: fit-content;
     height: fit-content;
     position: relative;
     display: inline-block;
-    margin-left: 90%;
-    margin-top: 5%;
+    margin-left: 10rem;
 }
 .menu-div{
+    display: flex;
+    flex-direction: row;
     align-items: center;
     width: 100%;
     height: 100%;
     grid-column: 3;
     grid-row: 1;
+}
+.menu-option{
+    padding: 0.2rem;
+    border-radius: 0.9rem;
+    text-decoration: none;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-right: 2%;
+}
+.menu-option:hover{
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+    transition: all 0.5s ease-out;
 }
 .menu{
     float: right;
@@ -212,7 +229,7 @@ html{
     height: fit-content;
 }
 .button-div:hover{
-    background-color: red;
+    background-color: rgb(255, 94, 0);
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
     transition: all 0.5s ease-out;
 }
@@ -229,7 +246,7 @@ html{
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
     float: right;
     transition: all 0.5s ease-out; /* Add transition */
-    background-color: red;
+    background-color: rgb(255, 94, 0);
 }
 .dropdown a{
     display: flex;
@@ -238,7 +255,7 @@ html{
     padding: 10px;
     text-decoration: none;
     color: white;
-    background-color: red;
+    background-color: rgb(255, 94, 0);
     border: 0.1px solid rgb(142, 142, 142);
     transition: all 0.3s ease-out; /* Add transition */
 }
@@ -286,6 +303,13 @@ html{
     grid-row: 1;
     background-color: white;
 }
+.mid-div-mid-carnet{
+    width: 100%;
+    height: 100%;
+    grid-column: 2/6;
+    grid-row: 1;
+    background-color: transparent;
+}
 .mid-div-rigth{
     grid-column: 6; 
     grid-row: 1;
@@ -294,27 +318,42 @@ html{
     width: 100%;
     position: fixed;
     bottom: 0;
-    background-color: red;
+    background-color: rgb(255, 94, 0);
     height: fit-content;
 }
 .bottom-div{
     height: fir-content;
     width: 100%;
-    background-color: red;
+    background-color: rgb(255, 94, 0);
 }
 .text-header{
     margin-left: 10px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: start;
     color: black;
-    font-size: 30px;  
+    font-size: 2.3rem;  
     font-weight: bold;
 }
-.text{
+.bottom-text{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: start;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+.text-white{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: start;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+.text-black{
+    padding: 5px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: start;
     color: black;
-    font-size: 20px;
+    font-size: 1.3rem;
     font-weight: bold;
 }
 .iframe{
@@ -332,7 +371,7 @@ html{
 .send-button{
     width: fit-content;
     height: fit-content;
-    background-color: red;
+    background-color: rgb(255, 94, 0);
     color: white;
     border: 1px solid black;
     border-radius: 5px;
